--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="/dist/mian.css">
+    <link rel="stylesheet" type="text/css" href="dist/mian.css">
 
 
 </head>
@@ -11,6 +11,6 @@
     <div id="app">
         Hello World
     </div>
-    <script type="text/javascript" src="/dist/main.js"></script>
+    <script type="text/javascript" src="dist/main.js"></script>
 </body>
 </html>
